--- a/app/templates/affichage.html
+++ b/app/templates/affichage.html
@@ -7,6 +7,7 @@
     <title>Affichage</title>
 </head>
 <body>
+    <p><a href="/">Retour</a></p>
     {% if ecole!=[] %}
         {% for i in ecole %}
         <label for="fname">{{i}}</label><br>
@@ -18,5 +19,7 @@
     
 
 </select>
+
+
 </body>
 </html>
