--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,40 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Acceuil</title>
+    <title>Accueil</title>
 </head>
 <body>
 
 <form method="POST">
-    <select multiple name=specialite id=spe>
-        {% for spe in special %}
-        <option value= "{{spe}}" SELECTED>{{spe}}</option>"
-        {% endfor %}
-    </select>
+        <select multiple name=specialite id=spe>
+            <option value="" selected disabled hidden>Spécialité</option>
+            {% for spe in special %}
+            <option value= "{{spe}}" SELECTED>{{spe}}</option>"
+            {% endfor %}
+        </select>
 
-    <select name=annee id=annee>
-        {% for ann in ["3/2","5/2"] %}
-        <option value= "{{ann}}" SELECTED>{{ann}}</option>"
-        {% endfor %}
-    </select>
+        <select name=annee id=annee>
+            <option value="" selected disabled hidden>Année</option>
+            {% for ann in ["3/2","5/2"] %}
+            <option value= "{{ann}}" SELECTED>{{ann}}</option>"
+            {% endfor %}
+        </select>
+        
+        
 
-    <select name=alternance id=alt>
-        {% for alt in ["Oui","Non","Peu importe"] %}
-        <option value= "{{alt}}" SELECTED>{{alt}}</option>"
-        {% endfor %}
-    </select>
-    
-    <select multiple name=region id=region>
-        {% for reg in region %}
-        <option value= "{{reg}}" SELECTED>{{reg}}</option>"
-        {% endfor %}
-    </select>
-    
-    <select multiple name=concours id=admission>
-        {% for con in concours %}
-        <option value= "{{con}}" SELECTED>{{con}}</option>"
-        {% endfor %}
-    </select>
+        <select name=alternance id=alt>
+            <option value="" selected disabled hidden>Alternance</option>
+            {% for alt in ["Oui","Non","Peu importe"] %}
+            <option value= "{{alt}}" SELECTED>{{alt}}</option>"
+            {% endfor %}
+        </select>
+        
+
+        <select multiple name=region id=region>
+            <option value="" selected disabled hidden>Région</option>
+            {% for reg in region %}
+            <option value= "{{reg}}" SELECTED>{{reg}}</option>"
+            {% endfor %}
+        </select>
+
+        <select multiple name=concours id=admission>
+            <option value="" selected disabled hidden>Concours</option>
+            {% for con in concours %}
+            <option value= "{{con}}" SELECTED>{{con}}</option>"
+            {% endfor %}
+        </select> 
     <br>
     <label for="fname">Maths</label><br>
     <input id="math" required step='0.01' type="number" name="maths" min="0" max="20" >
@@ -59,7 +67,17 @@
     <input id="mode" required step='0.01' type="number" name="modelisation" min="0" max="20">
     <br>
     <input type="submit">
+
 </form>
+
+    <p><a href="add">Ajouter une spécialité</a></p>
+    <p><a href="addspeecole">Ajouter une spécialité à une école</a></p>
+    <p><a href="addsug">Envoyer une suggestion</a></p>
+
+
+
+
+
 
 
 </select>
