--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <title>Accueil</title>
     <style>
     div.absolute {
         position: absolute;
-        top: 40px;
-        right: 80px;
-        margin-right: 150px;
+        top: 20px;
+        right: 50px;
+        left: 250px;
       }
     
     </style>
@@ -17,51 +19,45 @@
 
 <form method="POST">
     <div class="absolute">
-        <div class="unselected-field" style="display:block;" id="selectCountry">
-            <label>Specialité&nbsp;&nbsp;
-            </label>
-                <label>Année:&nbsp;&nbsp;&nbsp;&nbsp;
-                </label>
-                <label>Alternance:&nbsp;&nbsp;
-                </label>
-                <label>Région:&nbsp;&nbsp
-                </label>
-                <label>Concours
-                </label>
-        </div>
-        
-            <select multiple name=specialite id=spe>
-            {% for spe in special %}
-            <option value= "{{spe}}" SELECTED>{{spe}}</option>"
-            {% endfor %}
-        </select>
 
-        <select name=annee id=annee>
+        <select class="custom-select" multiple name=specialite id=spe size="3" >
+            <option selected >Spécialité</option>
+                {% for spe in special %}
+                <option value= "{{spe}}" SELECTED>{{spe}}</option>"
+                {% endfor %}
+          </select>
+
+          <select class="custom-select" multiple name=annee id=annee size="3" >
+            <option selected >Année</option>
             {% for ann in ["3/2","5/2"] %}
             <option value= "{{ann}}" SELECTED>{{ann}}</option>"
             {% endfor %}
-        </select>
+          </select>
         
-        
-
-        <select name=alternance id=alt>
+          <select class="custom-select" multiple name=alternance id=alt size="3">
+            <option selected >Alternance</option>
             {% for alt in ["Oui","Non","Peu importe"] %}
             <option value= "{{alt}}" SELECTED>{{alt}}</option>"
             {% endfor %}
-        </select>
-        
+          </select>
 
-        <select multiple name=region id=region>
+          <select class="custom-select" multiple name=region id=region  size="3">
+            <option selected >Region</option>
             {% for reg in region %}
             <option value= "{{reg}}" SELECTED>{{reg}}</option>"
             {% endfor %}
-        </select>
+          </select>
 
-        <select multiple name=concours id=admission>
+          <select class="custom-select" multiple name=concours id=admission size="3">
+            <option selected >Concours</option>
             {% for con in concours %}
             <option value= "{{con}}" SELECTED>{{con}}</option>"
             {% endfor %}
-        </select> 
+          </select>
+        
+
+            
+ 
         </div>
     <br>
     <label for="fname">Maths</label><br>
