--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,35 +21,35 @@
     <div class="absolute">
 
         <select class="custom-select" multiple name=specialite id=spe size="3" >
-            <option selected >Spécialité</option>
+            <option disabled selected >Spécialité</option>
                 {% for spe in special %}
                 <option value= "{{spe}}" SELECTED>{{spe}}</option>"
                 {% endfor %}
           </select>
 
           <select class="custom-select"  name=annee id=annee size="3" required >
-            <option selected >Année</option>
+            <option disabled selected >Année</option>
             {% for ann in ["3/2","5/2"] %}
             <option value= "{{ann}}" SELECTED>{{ann}}</option>"
             {% endfor %}
           </select>
         
           <select class="custom-select"  name=alternance id=alt size="3" required>
-            <option selected >Alternance</option>
+            <option disabled selected >Alternance</option>
             {% for alt in ["Oui","Non","Peu importe"] %}
             <option value= "{{alt}}" SELECTED>{{alt}}</option>"
             {% endfor %}
           </select>
 
           <select class="custom-select" multiple name=region id=region  size="3">
-            <option selected >Region</option>
+            <option disabled selected >Region</option>
             {% for reg in region %}
             <option value= "{{reg}}" SELECTED>{{reg}}</option>"
             {% endfor %}
           </select>
 
           <select class="custom-select" multiple name=concours id=admission size="3">
-            <option selected >Concours</option>
+            <option disabled selected >Concours</option>
             {% for con in concours %}
             <option value= "{{con}}" SELECTED>{{con}}</option>"
             {% endfor %}
