--- a/app/templates/affichage.html
+++ b/app/templates/affichage.html
@@ -19,7 +19,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <script>
-$("#search_form_input").click(function(){
+$("#search_form_input").change(function(){
     var text = $(this).val();
     $.ajax({
       url: "/prix",
