--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     <style>
     div.absolute {
         position: absolute;
-        top: 20px;
+        top:47px;
         right: 50px;
         left: 250px;
       }
@@ -26,28 +26,33 @@
                 <option value= "{{spe}}" SELECTED>{{spe}}</option>"
                 {% endfor %}
           </select>
-
-          <select class="custom-select"  name=annee id=annee size="3" required >
+          <br>
+          <br>
+          
+          <select class="custom-select"  name=annee id=annee  required >
             <option disabled selected >Année</option>
             {% for ann in ["3/2","5/2"] %}
             <option value= "{{ann}}" SELECTED>{{ann}}</option>"
             {% endfor %}
           </select>
-        
-          <select class="custom-select"  name=alternance id=alt size="3" required>
+          <br>
+          <br>
+          <select class="custom-select"  name=alternance id=alt required>
             <option disabled selected >Alternance</option>
             {% for alt in ["Oui","Non","Peu importe"] %}
             <option value= "{{alt}}" SELECTED>{{alt}}</option>"
             {% endfor %}
           </select>
-
+          <br>
+          <br>
           <select class="custom-select" multiple name=region id=region  size="3">
             <option disabled selected >Region</option>
             {% for reg in region %}
             <option value= "{{reg}}" SELECTED>{{reg}}</option>"
             {% endfor %}
           </select>
-
+          <br>
+          <br>
           <select class="custom-select" multiple name=concours id=admission size="3">
             <option disabled selected >Concours</option>
             {% for con in concours %}
