--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -93,6 +93,8 @@
     <p><a href="add">Ajouter une spécialité</a></p>
     <p><a href="addspeecole">Ajouter une spécialité à une école</a></p>
     <p><a href="addsug">Envoyer une suggestion</a></p>
+    <p><a href="admin">Espace Admin</a></p>
+
 
 
 
