--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,6 +94,8 @@
     <p><a href="addspeecole">Ajouter une spécialité à une école</a></p>
     <p><a href="addsug">Envoyer une suggestion</a></p>
     <p><a href="admin">Espace Admin</a></p>
+    <p><a href="singin">Inscription</a></p>
+
 
 
 
